kubernetes/namespaces/torrents/qbittorrent-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-exporter
  namespace: torrents
  labels:
    app: qbittorrent-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent-exporter
  template:
    metadata:
      labels:
        app: qbittorrent-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
    spec:
      containers:
      - name: qbittorrent-exporter
        image: esanchezm/qbittorrent-exporter:v1.2.0
        ports:
        - name: metrics
          containerPort: 8000
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-exporter
  namespace: torrents
  labels:
    app: qbittorrent-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  selector:
    app: qbittorrent-exporter
  ports:
  - name: metrics
    port: 8000
    targetPort: metrics
